# bevy_ta

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.codex/: config.toml
assets/shaders/npr/: outline.wgsl  toon.wgsl
assets/shaders/npr/toon/: face_sdf.wgsl
scripts/: bevy_brp_mcp  bevy_ta_brp
src/: app.rs  brp_tools.rs  debug_gizmos.rs  lib.rs  lighting.rs  main.rs  mcp.rs  npr.rs  selection.rs  ui.rs  utils.rs
src/app/: initial_orbit.rs  scene_picking.rs
src/mcp/: debug_camera.rs  material.rs
src/npr/: outline.rs  profile.rs  toon.rs
