[package]
name = "bevy_ta"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["debug", "jpeg", "png"] }
bevy_egui = { version = "0.39.1", optional = true }
bevy-inspector-egui = { version = "0.36.0", optional = true }
bevy_material_preview = { version = "0.2.0", path = "../bevy_material_preview", optional = true }
bevy_picking = { version = "0.18.1", features = ["mesh_picking"] }
bevy_brp_extras = { version = "0.18.4", optional = true }
bevy_remote = { version = "0.18.1", optional = true }
egui-chinese-font = { version = "0.2.0", path = "../git_cloned/egui-chinese-font", optional = true }
ron = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[features]
default = ["dev_ui"]
dev_ui = [
    "dep:bevy_egui",
    "dep:bevy_material_preview",
    "dep:egui-chinese-font",
]
inspector = ["dev_ui", "dep:bevy-inspector-egui"]
brp_tools = ["dep:bevy_brp_extras", "dep:bevy_remote"]
